modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-host-paths/constraints/policy_1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8AllowedHostPaths
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
      - apiGroups: [""]
        kinds: ["ReplicationController"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
    namespaceSelector:
      matchLabels:
        custom-policy: example
  parameters:
    allowedHostPaths:
      - pathPrefix: /proc/rw
        readOnly: false
      - pathPrefix: /proc/ro
        readOnly: true
