modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-host-paths/rendered/test_samples/pods/001-001-allowed-no-hostpath-volumes.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-no-hostpath-volumes
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
