modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-host-paths/rendered/test_samples/pods/002-004-disallowed-hostpath-proc.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-hostpath-proc
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          volumeMounts:
            - mountPath: /host-proc
              name: proc-volume
    volumes:
        - hostPath:
            path: /proc
          name: proc-volume
