modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-host-paths/rendered/test_samples/pods/003-003-disallowed-hostpath-proc-ro.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-hostpath-proc-ro
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          volumeMounts:
            - mountPath: /host-proc
              name: proc-volume
              readOnly: true
    volumes:
        - hostPath:
            path: /proc/ro
          name: proc-volume
