modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-host-paths/rendered/test_samples/pods/004-002-disallowed-hostpath-etc.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-hostpath-etc
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          volumeMounts:
            - mountPath: /host-etc
              name: etc-volume
    volumes:
        - hostPath:
            path: /etc
          name: etc-volume
