modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-host-paths/rendered/test_samples/pods/005-005-disallowed-multiple-volumes-one-hostpath.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-multiple-volumes-one-hostpath
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          volumeMounts:
            - mountPath: /config
              name: config-volume
            - mountPath: /host-proc
              name: proc-volume
    volumes:
        - configMap:
            name: my-config
          name: config-volume
        - hostPath:
            path: /proc
          name: proc-volume
