modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-host-paths/rendered/test_samples/pods/009-009-allowed-proc-rw-readwrite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-proc-rw-readwrite
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          volumeMounts:
            - mountPath: /host-proc
              name: proc-volume
              readOnly: false
    volumes:
        - hostPath:
            path: /proc/rw
          name: proc-volume
