modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-host-paths/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-host-paths
tests:
  - name: pss-baseline
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 001-allowed-no-hostpath-volumes
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-001-allowed-no-hostpath-volumes.yaml
        assertions:
          - violations: "no"
      - name: 004-disallowed-hostpath-proc
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-004-disallowed-hostpath-proc.yaml
        assertions:
          - violations: "yes"
      - name: 003-disallowed-hostpath-proc-ro
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-003-disallowed-hostpath-proc-ro.yaml
        assertions:
          - violations: "yes"
      - name: 002-disallowed-hostpath-etc
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-002-disallowed-hostpath-etc.yaml
        assertions:
          - violations: "yes"
      - name: 005-disallowed-multiple-volumes-one-hostpath
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-005-disallowed-multiple-volumes-one-hostpath.yaml
        assertions:
          - violations: "yes"
  - name: security-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: 006-allowed-no-hostpath-volumes
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-001-allowed-no-hostpath-volumes.yaml
        assertions:
          - violations: "no"
      - name: 007-allowed-proc-ro-readonly
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/007-007-allowed-proc-ro-readonly.yaml
        assertions:
          - violations: "no"
      - name: 008-allowed-proc-rw-readonly
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/008-008-allowed-proc-rw-readonly.yaml
        assertions:
          - violations: "no"
      - name: 009-allowed-proc-rw-readwrite
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/009-009-allowed-proc-rw-readwrite.yaml
        assertions:
          - violations: "no"
      - name: 010-allowed-proc-rw-subpath-readwrite
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/010-010-allowed-proc-rw-subpath-readwrite.yaml
        assertions:
          - violations: "no"
      - name: 013-disallowed-proc-ro-readwrite
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/011-013-disallowed-proc-ro-readwrite.yaml
        assertions:
          - violations: "yes"
      - name: 012-disallowed-proc-not-allowed-prefix
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/012-012-disallowed-proc-not-allowed-prefix.yaml
        assertions:
          - violations: "yes"
      - name: 011-disallowed-etc-path
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/013-011-disallowed-etc-path.yaml
        assertions:
          - violations: "yes"
  - name: security-policy-with-exception
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: 015-018-allowed-by-exception-mismatch-but-constraint-allows
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-015-018-allowed-by-exception-mismatch-but-constraint-allows-inv-1.yaml
        object: test_samples/pods/014-015-018-allowed-by-exception-mismatch-but-constraint-allows.yaml
        assertions:
          - violations: "no"
      - name: 015-019-allowed-by-exception-multiple-paths
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-015-018-allowed-by-exception-mismatch-but-constraint-allows-inv-1.yaml
        object: test_samples/pods/015-015-019-allowed-by-exception-multiple-paths.yaml
        assertions:
          - violations: "no"
      - name: 016-020-allowed-by-exception-proc-etc-readwrite
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/003-016-020-allowed-by-exception-proc-etc-readwrite-inv-1.yaml
        object: test_samples/pods/016-016-020-allowed-by-exception-proc-etc-readwrite.yaml
        assertions:
          - violations: "no"
      - name: 016-022-disallowed-by-exception-path-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/003-016-020-allowed-by-exception-proc-etc-readwrite-inv-1.yaml
        object: test_samples/pods/017-016-022-disallowed-by-exception-path-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 016-023-disallowed-by-exception-readonly-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/003-016-020-allowed-by-exception-proc-etc-readwrite-inv-1.yaml
        object: test_samples/pods/018-016-023-disallowed-by-exception-readonly-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 024-disallowed-no-exception-label
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/019-024-disallowed-no-exception-label.yaml
        assertions:
          - violations: "yes"
      - name: 016-021-disallowed-by-exception-multiple-volumes-one-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/003-016-020-allowed-by-exception-proc-etc-readwrite-inv-1.yaml
        object: test_samples/pods/020-016-021-disallowed-by-exception-multiple-volumes-one-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 017-025-disallowed-by-exception-empty-spec
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/007-017-025-disallowed-by-exception-empty-spec-inv-1.yaml
        object: test_samples/pods/021-017-025-disallowed-by-exception-empty-spec.yaml
        assertions:
          - violations: "yes"
